ci/assets/azure/network.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualNetworkNameForBats": {
      "type": "string",
      "defaultValue": "boshvnet-bats",
      "metadata": {
        "description": "name of the virtual network for BATs"
      }
    },
    "virtualNetworkNameForLifecycle": {
      "type": "string",
      "defaultValue": "boshvnet-lifecycle",
      "metadata": {
        "description": "name of the virtual network for lifecycle"
      }
    },
    "virtualNetworkPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
        "description": "the CIDR block of the azure virtual network"
      }
    },
    "subnet1NameForBosh": {
      "type": "string",
      "defaultValue": "BOSH1",
      "metadata": {
        "description": "name of the first subnet for Bosh"
      }
    },
    "subnet2NameForBosh": {
      "type": "string",
      "defaultValue": "BOSH2",
      "metadata": {
        "description": "name of the second subnet for Bosh"
      }
    },
    "boshSubnet1Prefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
        "description": "the CIDR block of the first subnet for Bosh"
      }
    },
    "boshSubnet2Prefix": {
      "type": "string",
      "defaultValue": "10.0.1.0/24",
      "metadata": {
        "description": "the CIDR block of the second subnet for Bosh"
      }
    },
    "subnet1NameForCloudFoundry": {
      "type": "string",
      "defaultValue": "CloudFoundry1",
      "metadata": {
        "description": "name of the first subnet for CloudFoundy"
      }
    },
    "subnet2NameForCloudFoundry": {
      "type": "string",
      "defaultValue": "CloudFoundry2",
      "metadata": {
        "description": "name of the second subnet for CloudFoundy"
      }
    },
    "cfSubnet1Prefix": {
      "type": "string",
      "defaultValue": "10.0.16.0/24",
      "metadata": {
        "description": "the CIDR block of the first subnet for CloudFoundy"
      }
    },
    "cfSubnet2Prefix": {
      "type": "string",
      "defaultValue": "10.0.17.0/24",
      "metadata": {
        "description": "the CIDR block of the second subnet for CloudFoundy"
      }
    }
  },
  "variables": {
    "apiVersion": "2015-06-15",
    "location": "[resourceGroup().location]",
    "pubIPBaseName": "AzureCPICI",
    "boshNetworkSecurityGroup": "nsg-cpi"
  },
  "resources": [
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('boshNetworkSecurityGroup')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "ssh",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "bosh-agent",
            "properties": {
              "description": "Allow bosh-agent",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "6868",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 201,
              "direction": "Inbound"
            }
          },
          {
            "name": "bosh-director",
            "properties": {
              "description": "Allow bosh-director",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "25555",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 202,
              "direction": "Inbound"
            }
          },
          {
            "name": "dns",
            "properties": {
              "description": "Allow DNS",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 203,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworkNameForBats')]",
      "location": "[variables('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('virtualNetworkPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('subnet1NameForBosh')]",
            "properties": {
              "addressPrefix": "[parameters('boshSubnet1Prefix')]"
            }
          },
          {
            "name": "[parameters('subnet1NameForCloudFoundry')]",
            "properties": {
              "addressPrefix": "[parameters('cfSubnet1Prefix')]"
            }
          },
          {
            "name": "[parameters('subnet2NameForCloudFoundry')]",
            "properties": {
              "addressPrefix": "[parameters('cfSubnet2Prefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworkNameForLifecycle')]",
      "location": "[variables('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('virtualNetworkPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('subnet1NameForBosh')]",
            "properties": {
              "addressPrefix": "[parameters('boshSubnet1Prefix')]"
            }
          },
          {
            "name": "[parameters('subnet2NameForBosh')]",
            "properties": {
              "addressPrefix": "[parameters('boshSubnet2Prefix')]"
            }
          },
          {
            "name": "[parameters('subnet1NameForCloudFoundry')]",
            "properties": {
              "addressPrefix": "[parameters('cfSubnet1Prefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[concat(variables('pubIPBaseName'),'-bosh')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "static"
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[concat(variables('pubIPBaseName'), '-cf-lifecycle')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "static"
      }
    },
    {
      "apiVersion": "[variables('apiVersion')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[concat(variables('pubIPBaseName'), '-cf-bats')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "static"
      }
    }
  ]
}
